# creation_dataset_correction_artefact

./: .gitignore  README.md  pyproject.toml
code/: extract_window_n_label_from_raw.py  get_one_big_dataset.py  test_features_coherence.py
